--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
+    "sass": "^1.69.3",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
