--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-switch": "^1.0.3",
+    "@syncfusion/ej2-base": "^23.1.40",
     "@syncfusion/ej2-react-schedule": "^23.1.40",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
